--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,7 @@ p {
 
 .prime-page a {
   background: white;
+  display: block;
   color: black;
   padding: 20px 25px;
   border-radius: 30px;
@@ -54,7 +55,7 @@ p {
 .backgroud-img {
   width: 100%;
   opacity: 34%;
-  min-width: 1100px;
+  min-height: 790px;
 }
 
 .container {
@@ -66,22 +67,27 @@ p {
   margin-top: 90px;
 }
 
-@media (max-width: 390px) {
-  h1 {
-    font-size: 45px;
+@media screen and (max-width: 746px) {
+  .prime-page h2 {
+    top: 58%;
   }
 
+  .prime-page a {
+    top: 71%;
+    left: 41%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 60px;
+  }
   .prime-page h2 {
-    font-size: 17px;
-    top: 52%;
+    top: 58%;
   }
 
   .prime-page a {
     top: 70%;
-    left: 34%;
-    font-size: 13px;
-  }
-
-  .backgroud-img {
+    left: 38%;
   }
 }
