--- a/src/style.css
+++ b/src/style.css
@@ -83,11 +83,13 @@ p {
     font-size: 60px;
   }
   .prime-page h2 {
-    top: 58%;
+    top: 55%;
+    font-size: 18px;
   }
 
   .prime-page a {
     top: 70%;
     left: 38%;
+    font-size: 16px;
   }
 }
