--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,22 @@ p {
   color: white;
 }
 
+.projects-link  {
+  color: white;
+  text-decoration: none;
+  position: absolute;
+  top: 92%;
+  left: 46%;
+  text-shadow: 0px 0px 20px rgb(184, 184, 184);
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+}
+
+a:hover {
+    color: white;
+    text-shadow: 0px 0px 20px white;
+}
+
 .img-fluid {
   max-width: 370px;
   box-shadow: 0px 0px 5px 1px rgb(184, 184, 184);
@@ -116,4 +132,9 @@ p {
     left: 33%;
     font-size: 16px;
   }
+}
+
+.arrow {
+    font-size: 30px;
+    line-height: 0;
 }
